--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -49,11 +49,13 @@
 
 \def\aj{Astronomical Journal}             % Astronomical Journal
 \def\apj{Astrophysical Journal}                % Astrophysical Journal
-\def\apjl{Astrophysical Journal}             % Astrophysical Journal, Letters
+\def\apjl{Astrophysical Journal Letters}             % Astrophysical Journal, Letters
 \def\pasj{PASJ}
 \def\apjs{ApJS}              % Astrophysical Journal, Supplement
 \def\mnras{MNRAS}            % Monthly Notices of the RAS
 \def\prd{Phys.~Rev.~D}       % Physical Review D
+\def\pre{Phys.~Rev.~E\ }        % Physical Review E
+\def\prx{Phys.~Rev.~X\ }        % Physical Review X
 \def\prl{Phys.~Rev.~Lett}    % Physical Review Letters
 \def\cqg{Class.~Quant.~Grav.~}%Classical and Quantum Gravity
 \def\araa{ARA\&A}             % Annual Review of Astron and Astrophys
@@ -129,7 +131,7 @@ The LIGO and Virgo detectors have directly observed gravitational waves from mer
 
 \section{Introduction}
 
-Our goal is to present an informal, colloquium-style article on the subject of merging stellar-mass black-hole binaries as gravitational-wave sources. Several reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}.  More recent contributions included reviews by \citet{Mapelli:2018,Mapelli:2021} and a compilation of compact binary merger rate measurements and predictions by \citet{MandelBroekgaarden:2021}. However, it is challenging to formally review a field that is both rapidly evolving and still very much in its infancy.  With around 50 detections of gravitational waves from merging black holes \citep{,BBH:O1,BBH:O2,Venumadhav:2020,GWTC2,Abbott:2021-GWTC-2-1,Nitz:2021}, along with two from merging neutron stars \citep{GW170817, GW190425} and two from mergers of neutron stars with black holes \citep{GW200105}, we are only beginning to explore the population of merging compact-object binaries.  The understanding of the formation channels for these sources is evolving with each new data release.
+Our goal is to present an informal, colloquium-style article on the subject of merging stellar-mass black-hole binaries as gravitational-wave sources. Several reviews were written in the excitement following the first detection \citep{GW150914} of gravitational waves by the Laser Interferometer Gravitational-wave Observatory (LIGO) \citep{GW150914:detectors}, including the astrophysical context companion paper by the the LIGO-Virgo scientific collaboration \citep{GW150914:astro} and the excellent article by \citet{Miller:2016}.  More recent contributions included reviews by \citet{Mapelli:2018,Mapelli:2021} and a compilation of compact binary merger rate measurements and predictions by \citet{MandelBroekgaarden:2021}. However, it is challenging to formally review a field that is both rapidly evolving and still very much in its infancy.  With around 70 detections of gravitational waves from merging black holes \citep{BBH:O1,BBH:O2,Venumadhav:2020,GWTC2,Abbott:2021-GWTC-2-1,Nitz:2021,GWTC3}, along with two from merging neutron stars \citep{GW170817, GW190425} and two from mergers of neutron stars with black holes \citep{GW200105}, we are only beginning to explore the population of merging compact-object binaries.  The understanding of the formation channels for these sources is evolving with each new data release.
 
 The full range of astrophysical questions that gravitational-wave observations will answer is itself a topic of active study and debate. For example: What can gravitational-wave observations of merging binaries tell us about the stellar and binary evolution that preceded the mergers?  Can the observations constrain the amount of mass loss and expansion experienced by massive stars? Or the stability and consequences of mass transfer, including the infamous common-envelope phase of evolution? Or the amount of mass fallback during supernova explosions, or the kicks that supernovae impart to compact objects? Does the redshift distribution of merging compact objects contain an imprint of the star formation history of the Universe?  Can we use these mergers to probe dynamics in dense stellar environments such as globular clusters? The answers to these important and exciting questions may also in turn influence our understanding of topics as diverse as reionisation and heavy-element nucleosynthesis.
 
@@ -146,8 +148,7 @@ We summarise the existing observations of merging binary black holes and closely
 
 
 \subsubsection{The confirmed detections to date}
-During its first observing run, lasting from September of 2015 through January of 2016, the advanced LIGO detector network observed three signals from the mergers of binary black holes:  GW150914 \citep{GW150914}, GW151226 \citep{GW151226} and GW151012 \citep{GW150914:rates,BBH:O1}.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.  The first half of the third observing run, which lasted from April to October of 2019, saw detections of nearly 40 binary black hole mergers \citep{GWTC2,Abbott:2021-GWTC-2-1}, among which GW190412 \citep{GW190412}, GW190814 \citep{GW190814}, GW190521 \citep{GW190521} stood out for their mass and mass ratio measurements (see section \ref{sec:GWevents}).  Additional candidates were found by search pipelines external to the LIGO-Virgo-KAGRA collaborations in LIGO-Virgo public data \citep{Nitz:2019,Nitz:2021,Venumadhav:2019,Venumadhav:2020}.  
-
+During its first observing run, lasting from September of 2015 through January of 2016, the advanced LIGO detector network observed three signals from the mergers of binary black holes:  GW150914 \citep{GW150914}, GW151226 \citep{GW151226} and GW151012 \citep{GW150914:rates,BBH:O1}.  During the second observing run, lasting with some interruptions from November 2016 through August 2017, three further confident binary black hole detections were announced: GW170104 \citep{GW170104},  GW170608 \citep{GW170608}, and GW170814 \citep{GW170814}, the last of these with the participation of the Virgo gravitational-wave observatory \citep{AdvVirgo}.  The first half of the third observing run, which lasted from April to October of 2019, saw detections of nearly 40 binary black hole mergers \citep{GWTC2,Abbott:2021-GWTC-2-1}, among which GW190412 \citep{GW190412}, GW190814 \citep{GW190814}, GW190521 \citep{GW190521} stood out for their mass and mass ratio measurements (see section \ref{sec:GWevents}).  Approximately 30 more binary black holes (the exact numbers here and above depend on the assumed threshold for confident detections) were observed during the second half of the third observing run, from November 2019 through March 2020 \citep{GWTC3}.  Additional candidates were found by search pipelines external to the LIGO-Virgo-KAGRA collaborations in LIGO-Virgo public data \citep{Nitz:2019,Nitz:2021,Venumadhav:2019,Venumadhav:2020}.  
 
 Meanwhile, the observation of gravitational waves from the binary neutron star merger GW170817 \citep{GW170817} was followed up by an unprecedented campaign of electromagnetic observations, leading to detections of a short gamma ray burst, optical kilonova, and an afterglow spanning from radio through X-ray wavelengths \citep{GW170817:GRB,GW170817:MMA}.  Another confident detection of a binary neutron star merger, GW190425 \citep{GW190425}, as well as two mergers of neutron stars with black holes,  GW200105 and GW200115 \citep{GW200105}, did not yield electromagnetic counterparts.  
 We shall focus on binary black holes for the remainder of this article.
@@ -173,13 +174,13 @@ The vast majority of observed merging binary black holes are consistent with hav
 
 \textbf{Black-Hole Spins:} Individual black-hole spins are difficult to measure precisely with gravitational waves.  Most observed mergers are consistent with negligible spins, but some events show evidence of non-zero `effective spin' $\chi_\textrm{eff}$ --- the mass-weighted dimensionless spin along the direction of the orbital angular momentum.  The spin distribution is a topic of active ongoing discussion \citep[e.g.,][]{GWTC2:pop,Roulet:2021,Callister:2021,Galaudage:2021}.  In particular, \citet{Galaudage:2021} conclude that $\sim 80\%$ of merging binary black holes have negligible spins on both components (consistent with zero), while the remaining 20\% have positive and preferentially aligned spins, with no observed events displaying a definite negative $\chi_\textrm{eff}$.  The degree of precession due to spin-orbit misalignment is also unclear; there may be some evidence for it in individual events, such as GW190521 \citep{GW190521}, though other explanations for its signal morphology (e.g., eccentricity, see below) have been proposed.
 
-\textbf{Distances and Sky Locations:} All of the observed binary black hole signals came from median redshifts between $z\sim 0.05$ and $z \sim 0.7$ (distances of around 250 Mpc to 5 Gpc), consistent with the detector sensitivity during the first three observing runs of advanced LIGO.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.   The best-localised binary black hole mergers have 90\% credible sky localisations of only $\approx 20$ deg$^2$ \citep{GWTC2}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
+\textbf{Distances and Sky Locations:} All of the observed binary black hole signals came from median redshifts between $z\sim 0.05$ and $z \sim 0.9$ (distances of around 250 Mpc to 6 Gpc), consistent with the detector sensitivity during the first three observing runs of advanced LIGO \citep{GWTC3}.  With just two operational detectors, LIGO Hanford and LIGO Livingston, for all events prior to GW170814, sources could only be localised to 90\% credible regions spanning hundreds to more than a thousand square degrees on the sky.  The participation of the Virgo instrument in the observation of GW170814 reduced the sky region to only 60 deg$^2$ \citep{GW170814}.   The best-localised binary black hole mergers have 90\% credible sky localisations of only $\approx 20$ deg$^2$ \citep{GWTC2}.  Nonetheless, associations with specific host galaxies are impossible for all observed binary black hole mergers.  
 
 \textbf{Eccentricity:}  GW190521 appears to have residual eccentricity of at least 0.1 at the gravitational-wave frequency of 10 Hz \citep{RomeroShaw:2020GW190521}.  One or more other binary black hole mergers may also signs of non-negligible eccentricity \citep{RomeroShaw:2021}.  However, there is a possible degeneracy between eccentricity and precession \citep{Bustillo:2021}, and analyses generally do not include both effects, so eccentricity observations do not appear conclusive at this time.
 
 \textbf{Testing General Relativity:} All gravitational-wave signals observed to date are consistent with gravitational waves expected within the general theory of relativity, providing a stringent test of this theory in the dynamical, strong-field regime \citep{GW150914:GR,GWTC2:GR}.
 
-\textbf{Merger Rate:} The uncertainty in the binary black hole mass distribution is relayed into the uncertainty on the inferred merger rate: $23.9^{+14.3}_{-8.6}$ Gpc$^{-3}$ yr$^{-1}$.  There is tentative evidence that the merger rate increases with redshift \citep{GWTC2:pop}.  
+\textbf{Merger Rate:} The uncertainty in the binary black hole mass distribution is relayed into the uncertainty on the inferred merger rate, [16,130]  Gpc$^{-3}$ yr$^{-1}$ for the combined interval 90\% credible interval across mass distribution models under the assumption of a constant-in-redshift merger rate.  However, there is strong evidence that the merger rate increases with redshift; the local merger rate at redshift $z=0$ is [10,30]  Gpc$^{-3}$ yr$^{-1}$  \citep{GWTC3:pop}.  
 
 \subsection{Electromagnetic observations}
 
@@ -344,7 +345,7 @@ Models of the dynamical formation channel are typically based on either (i) comp
 
 \subsection{Merger rates}
 
-Here we outline high-level estimates of merger rates for each of the three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  The merger rate predictions and observed rates are summarised by \cite{MandelBroekgaarden:2021} (see \cite{ratesdoc} for a historical summary from a decade earlier).  Broadly, predictions for isolated binary evolution, including contributions from chemically homogeneous evolution and population III stars, are consistent with or exceed the observed rate of binary black hole mergers of $23.9^{+14.3}_{-8.6}$ Gpc$^{-3}$ yr$^{-1}$ \citep{GWTC2:pop}, while  predicted dynamical formation rates (including contributions from globular, nuclear, and young stellar clusters, as well as hierarchical triples) tend toward the lower end of the observed merger rate.
+Here we outline high-level estimates of merger rates for each of the three candidate formation channels. The value of this back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).  The merger rate predictions and observed rates are summarised by \cite{MandelBroekgaarden:2021} (see \cite{ratesdoc} for a historical summary from a decade earlier).  Broadly, predictions for isolated binary evolution, including contributions from chemically homogeneous evolution and population III stars, are consistent with or exceed the observed rate of binary black hole mergers of $[16,130]$ Gpc$^{-3}$ yr$^{-1}$ \citep{GWTC3:pop}, while predicted dynamical formation rates (including contributions from globular, nuclear, and young stellar clusters, as well as hierarchical triples) tend toward the lower end of the observed merger rate.
 
 \subsubsection{Binary evolution via a common envelope}\label{sec:CErates}
 
@@ -455,7 +456,7 @@ The above considerations place constraints on the formation time of the systems 
 
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
 
-The gravitational-wave events observed to date already provide a number of exciting insights into  the astrophysics of binary black holes and their progenitors, but many open questions remain.  Fortunately, these observations indicate a binary black hole merger rate of around $20$ Gpc$^{-3}$ yr$^{-1}$ at redshift zero with a likely higher merger rate at higher redshifts \citep{GWTC2:pop}, which points to the prospect of hundreds within the next few years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modelling.
+The gravitational-wave events observed to date already provide a number of exciting insights into the astrophysics of binary black holes and their progenitors, but many open questions remain.  Fortunately, these observations indicate a binary black hole merger rate of around $20$ Gpc$^{-3}$ yr$^{-1}$ at redshift zero with a likely higher merger rate at higher redshifts \citep{GWTC3:pop}, which points to the prospect of hundreds of detections within the next few years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to inaugurate gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  In this section, we describe some of the prospects for extracting information from the growing data set of observations over the next few years, including single informative observations, population statistical inference, and theoretical modelling.
 
 \subsection{Individual exciting events}
 Three years ago, in an earlier version of this review, we suggested that two of the most exciting individual observations could include components in either the pair-instability supernova mass gap or the possible mass gap between neutron stars and $\gtrsim 5\, M_\odot$ black holes.  With GW190521 and GW190814, both have now been observed!
@@ -472,7 +473,7 @@ Although electromagnetic transients are not broadly expected to be associated wi
 
 Population statistics will generally yield more information than individual events.  We can use the statistical analysis of sufficiently large observational data sets to infer bulk properties of the source population, such as the mass and spin distributions, and to search for distinct subpopulations.  We can separate the approaches to inference on the observed populations into two types: unmodelled or weakly modelled inference, and inference that relies on specific accurate models. 
 
-At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1,GWTC2:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parameterised mass model to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated weakly parameterised inference on the spin distributions \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021}.  
+At the most basic end of weakly modelled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{BBH:O1,GWTC2:pop,GWTC3:pop}, while accounting for measurement uncertainties and selection effects.  For example, \citet{Fishbach:2017mass} and \citet{Edelman:2021} explored weakly parameterised mass model to search for the presence of a mass gap due to pair-instability supernovae or an excess peak due to pulsational pair-instability supernovae, while \citet{RinaldiDelPozzo:2021} considered a completely non-parametric Dirichlet process Gaussian mixture model for the mass distribution.  Meanwhile, as discussed above, several groups investigated weakly parameterised inference on the spin distributions \citep[e.g.,][]{TalbotThrane:2017,GWTC2:pop,Callister:2021,Galaudage:2021}.  
 
 We can look for distinct subpopulations or ``clusters'' of events in the observable parameter space, in the hope of finding distinct categories corresponding to different evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to determine whether there are distinct subpopulations of events in mass space even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
 
@@ -521,5 +522,7 @@ AF is grateful for the astro-tourism.
 Vicky: refs on p. 4 (list of other observables), 5 (XRBs and their discussion),  bottom of 6, 8, bottom of 9, top of 10, 16, 17, 18, check 19, 
 
 isolated channel: Srinivasan 1989? BBHs: Braginsky & Thorne (check Levin's FB)?
+
+AGN disks -- see Bence
 
 
